Fixed MDNoteModal overflows

--- a/src/components/Notes/css/MDNoteModal.scss
+++ b/src/components/Notes/css/MDNoteModal.scss
@@ -54,7 +54,7 @@
         border-bottom: 1px solid var(--clr-black);
 
         input{
-            width: fit-content;
+            width: 100%;
             
             background-color: transparent;
             border: none;
